--- a/README
+++ b/README
@@ -1,1 +1,27 @@
-README
+##TasteBuds
+
+#####Overview
+TasteBuds is a platform for proclaiming what each user considers to be the best food establish for each given category in New York City. In the current version, a user can add their favorite places to the map, control the view of the map by selecting between categories of food, and search for new places to try using the Foursquare API. 
+
+In future versions, users will be able to see their friends favorite places and when opinions differ a user will be able to challenge their friend to try out a new place. If the user can sway their friend's opinion they will be rewarded with badges to show the community that they are a tastemaker. 
+
+[Click here to see the app.](http://https://stormy-anchorage-5874.herokuapp.com)
+#####Technologies
+This project was a challenge for me because I decided at the forefront that I wanted a single page application without the bulkiness of RoR behind it. After some research into the idea of single page appplications I decided that I would have to teach myself a new stack in order to execute this smoothly. Below are the technologies I used; those denoted with a ^ were completely new to me less than a week ago. 
+<ul>
+<li>Javascript/Jquery</li>
+<li>Postman</li>
+<li><a href="http://www.mongodb.org/">MongoDB^</a></li>
+<li><a href="http://mongoosejs.com/">Mongoose^</a></li>
+<li><a href="http://expressjs.com/">Express^</a></li>
+<li><a href="https://angularjs.org/">AngularJS^</a></li>
+<li><a href="http://nodejs.org/">Node.js^</a></li>
+<li><a href="http://bower.io">Bower</a></li>
+<li><a href="https://www.mapbox.com/">MapBox^</a></li>
+<li>Foursquare API</li>
+</ul>
+
+Built by Sarah McDonald
+
+
+ 
